Fine adjustments in popup interaction

--- a/popup.html
+++ b/popup.html
@@ -6,8 +6,8 @@
     <script src="popup.js"></script>
   </head>
   <body>
+    <p id="textTitle" class="ftpopup--text-title">Fortune Teller</p>
     <div id="chat" class="ftpopup--chat">
-      <p class="ftpopup--text">Fortune Teller</p>
     </div>
     <div id="form" class="ftpopup--form">
       <hr>
